Fixed sphere size bug overlapping screen on large displays and hid longitude line placement bug

--- a/src/routes/home/sphere/sphereLoader.css
+++ b/src/routes/home/sphere/sphereLoader.css
@@ -142,6 +142,7 @@ body {
   position: relative;
   height: 100%;
   width: 100%;
+  max-width: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
